[package]
name = "matrix_chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = "0.6.2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
openai-api-rs = "2.1.4"
dotenv = "0.15"